# FinAnalytics

./: .env.example  .gitignore  README.md  config.py  predict.py  proposal.md  pyproject.toml  requirements.txt  split_data.py  train.py
.cache/: marketaux_entity_cache.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: Analiz.py  Analysis.py  App.py  App_long.py  Home.py
app/pages/: Portfolio.py  Portföy.py  long.py  mid.py  portfolio.py  short.py
data/outputs/: feature_importance.csv  long_model_results_20260216_135928.csv
data/raw/: ReadMe.md
models/: long_model.pkl  long_model_reg.pkl  trend_classifier_model.pkl
models/AAPL/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/BF.B/: lgbm_1d.pkl  lgbm_3d.pkl
models/BF.B.US/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CAG/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CAG.US/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CCEP/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CCEP.US/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CHD/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CHD.US/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CL/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CL.US/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CLX/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/CLX.US/: lgbm_1d.pkl  lgbm_3d.pkl  lgbm_5d.pkl  lgbm_7d.pkl  xgb_1d.pkl  xgb_3d.pkl  xgb_5d.pkl  xgb_7d.pkl
models/COST.US/: lgbm_1d.pkl  (+7 more)
multi_sektor_analiz/: .gitignore  config_ibrahim.py  implementation_plan.md  main_ibrahim.py  walkthrough.md
notebooks/: long_model_dev.ipynb
reports/: training_results.json  walkforward_longmodel_h21.csv
research/: backtest_long_non_overlap.py  long_v2.py
scripts/: download_logos.py
short_model/: features.py  generate_report.py
src/: config.py  data.py  features.py  labels_long.py  long.py  mid.py  model_long.py  predict.py  screener.py  short.py  validate_long_model.py
(+663 files in other folders)
