[project]
name = "finanalytics"
version = "0.1.0"
description = ""
authors = [
  { name = "gunay-ozsoy", email = "gunayozsoy@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.0,<3",
  "numpy>=2.4.2,<3.0.0",
  "scikit-learn>=1.8.0,<2.0.0",
  "streamlit>=1.54.0,<2.0.0",
  "plotly>=6.5.2,<7.0.0",
  "joblib>=1.5.3,<2.0.0",
  "lightgbm (>=4.6.0,<5.0.0)",
  "datasets (>=4.5.0,<5.0.0)",
  "google-genai (>=1.63.0,<2.0.0)",
  "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
