[project]
name = "finanalytics"
version = "0.1.0"
description = "NASDAQ Short-Term Stock Classifier"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "gunay-ozsoy", email = "gunayozsoy@outlook.com" }]
dependencies = [
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "scikit-learn>=1.4,<2",
  "streamlit>=1.33,<2",
  "plotly>=5.20,<7",
  "joblib>=1.4,<2",
  "tqdm>=4.66,<5",
  "lightgbm>=4.3,<5",
  "xgboost>=2.0,<3",
  "ta>=0.11,<1",
  "datasets>=4.5,<5",
  "google-genai>=1.63,<2",
  "python-dotenv>=1.2,<2",
  "yfinance>=0.2,<1",
  "fpdf2 (>=2.8.6,<3.0.0)",
  "alpaca-py>=0.38,<1",

]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29"
jupyter = "^1.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
